@@ -6,7 +6,7 @@ plugins {
     id 'org.openjfx.javafxplugin' version '0.0.8'
     id "io.freefair.lombok" version "5.0.0-rc6"
 }
-mainClassName = 'edu.wpi.cs3733.d20.teamk.mortuary.Main'
+mainClassName = 'edu.wpi.cs3733.d20.teamk.mortuary.impl.Main'
 
 repositories {
     mavenCentral()
@@ -28,8 +28,9 @@ dependencies {
             'org.slf4j:slf4j-api:1.7.30',
             'org.slf4j:slf4j-simple:1.7.30',
 
+            'me.xdrop:fuzzywuzzy:1.1.7',
             'com.github.SocraticPhoenix:Occurrence:master-SNAPSHOT',
-            'com.github.SocraticPhoenix:JamFX:f97079841c'
+            'com.github.SocraticPhoenix:JamFX:b6c3770d11'
     )
 
     testImplementation(
@@ -41,9 +42,20 @@ dependencies {
     )
 }
 
+run {
+    jvmArgs = ['--add-opens=javafx.base/com.sun.javafx.runtime=ALL-UNNAMED',
+               '--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
+               '--add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
+               '--add-opens=javafx.base/com.sun.javafx.binding=ALL-UNNAMED',
+               '--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED',
+               '--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
+               '--add-opens=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED'
+    ]
+}
+
 javafx {
     version = "11"
-    modules = ['javafx.controls', 'javafx.fxml']
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.controls', 'javafx.graphics', 'javafx.swing', 'javafx.base' ]
 }
 
 
